# Quelti-Cake

./: CAKE.docx  CMakeLists.txt  GUI.cpp  GUI.h  QueltiLock.cpp  README.md
Languages/: languages.cpp
Quelti/: CMakeLists.txt  GUI.cpp  GUI.h  Quelti.cpp  Quelti.h  QueltiLock.cpp
Quelti/EncryptionMethod/: encryption.cpp  encryption.h
Quelti/EncryptionMethod/Colors/: colors.h
Quelti/KEYS/hhh/: key.qlt  keys.qlt  message.qlt
Quelti/KEYS/messageForPrezident/: key.qlt  keys.qlt  message.qlt
Quelti/Languages/: languages.cpp  languages.h
Quelti/sourse/: Encryptions.h  languages.h  numsEncryption.h
